php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44440 st_blocks undefined under BeOS
Submitted: 2008-03-15 06:31 UTC Modified: 2008-03-15 10:35 UTC
From: jonathonfreeman at gmail dot com Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.2.6RC2 OS: BeOS R5
Private report: No CVE-ID: None
 [2008-03-15 06:31 UTC] jonathonfreeman at gmail dot com
Description:
------------
Build fails under BeOS R5 in /main/streams/memory.c:237 -- structure has no member named `st_blocks'

Not sure if it's the appropriate fix, but I changed line 237 to this:
#if !defined(PHP_WIN32) && !defined(__BEOS__)

And PHP built successfully.

Reproduce code:
---------------
Build under BeOS R5.

Expected result:
----------------
Successfully build PHP.

Actual result:
--------------
Build fails.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-03-15 06:35 UTC] jonathonfreeman at gmail dot com
Correction: I changed line 235, not 237.
 [2008-03-15 10:35 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

BeOS also have st_blksize.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC