MFB: Fixed bug #44440 (st_blocks undefined under BeOS)